# asha-worker-copilot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
.kiro/specs/asha-worker-copilot/: design.md  requirements.md
asha-worker-copilot/: architecture-diagram.html  wireframes.html
backend/: .env.example  config.py  main.py  requirements.txt
backend/knowledge_base/guidelines/: child_immunization.json  common_diseases.json  emergency_protocols.json  maternal_health.json
backend/models/: assessment.py  patient.py  vaccination.py
backend/prompts/: assessment_prompt.py
backend/routers/: assessment.py  auth.py  patients.py  vaccination.py
backend/services/: bedrock_service.py  cognito_service.py  dynamo_service.py  polly_service.py  transcribe_service.py  translate_service.py
deploy/: nginx.conf  pull-and-restart.sh  setup_ec2.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/pages/: Assessment.jsx  Dashboard.jsx  Login.jsx  PatientDetail.jsx  Patients.jsx  Vaccination.jsx
frontend/src/utils/: api.js
scripts/: provision_ec2.py  refresh_credentials.py  setup_aws_resources.py  upload_guidelines.py
